
2004-10-15 10:30 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridCollapseCost) to compute current cost
	excluding the target edge and the cost after the edge is 
	collapsed to node0 and node1.

2004-10-15 09:30 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridCostFunction,gridSetCostFunction) added
	methods to allow the cost function metric to change on the fly.
	* src/gridmetric.c (gridAR,gridCellARDerivative) correct cost 
	indicated by gridCostFunction.
	* src/gridswap.c (gridSwapEdge) does not abort swap if mean ratio
	goes down when gridCostFunction is gridCOST_FCN_EDGE_LENGTH
	* src/Makefile.am unitNative now uses the standard refineLib
	EDGE_BASED_OPERATORS not needed.

2004-10-15 10:48 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridCloseTecplotFile) added to allow multiple plots
	in session.
	* test/box1_surface.lay added tecplot 10 layout with small
	multiples for box sides.
	
2004-10-15 01:53 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridCellRatioErrorDerivative) added a hacked
	derivative routine to try and hook up smoothing with edge
	based operators. I think I may need a new smoothing strategy.

2004-10-15 01:53 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwapEdge5) removed debug bestindex report.

2004-10-15 00:33 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am unitNative builds it own copy of the 
	objects that it can have its own #defines. Added a 
	EDGE_BASED_OPERATORS #define that affects gridmetric.c and 
	gridswap.c in the following ways:
	* src/gridmetric.c (gridAR) gridAR returns gridEdgeRatioCost
	when EDGE_BASED_OPERATORS is defined.
	* src/gridswap.c (gridSwapEdge) does not abort swap if mean ratio
	goes down when EDGE_BASED_OPERATORS is defined, this was fighting
	the edge length err.
	* src/unit_main.c set up a loop of six cycles with swaps with -e

2004-10-14 23:48 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridSetConnValuesWithMetricErrorMagnatude) added.